--- a/window_social_network/resources/css/app.css
+++ b/window_social_network/resources/css/app.css
@@ -220,6 +220,10 @@ main {
         width: auto !important;
     }
 
+    .admin {
+        width: auto !important;
+    }
+
 }
 
 @media screen and (max-width: 900px) {
