updated css in user-list-container hover

--- a/window_social_network/resources/css/app.css
+++ b/window_social_network/resources/css/app.css
@@ -140,6 +140,7 @@ main {
 
 .user-list-container:hover {
     background-color: lightgrey;
+    transform: scale(0.99);
 }
 
 .profile-cover-container {
